--- a/style.css
+++ b/style.css
@@ -1,28 +1,30 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Lato:ital,wght@1,300&family=Lugrasimo&family=Nunito:wght@200;300&family=Permanent+Marker&family=Roboto+Condensed:wght@300&display=swap');
+/* ========== VARIABLES ========== */
+:root {
+    --primary-color: rgb(90, 164, 248);
+    --accent-color: #0ea5e9; /* Analytics blue */
+    --text-gray: #ababab;
+    --background-dark: #121212;
+}
 
-*{
+/* ========== BASE ========== */
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* font-family:'Times New Roman', Times, serif ; */
-    /* font-family: 'Dancing Script', cursive; */
-    /* font-family: 'Lato', sans-serif; */
-    /* font-family: 'Lugrasimo', cursive; */
     font-family: 'Nunito', sans-serif;
-    /* font-family: 'Permanent Marker', cursive; */
-    /* font-family: 'Roboto Condensed', sans-serif; */
 }
 
-html{
+html {
     scroll-behavior: smooth;
 }
 
-body{
+body {
     background-color: black;
     color: white;
 }
 
-#header{
+/* ========== HEADER ========== */
+#header {
     background-image: url(pexels-dorran-1643280.jpg);
     width: 100vw;
     height: 100vh;
@@ -30,100 +32,110 @@ body{
     background-position: center;
 }
 
-.cont{
+.cont {
     padding: 10px 10%;
 }
 
-nav{
+nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
 }
 
-.logo{
+.logo {
     width: 140px;
 }
 
-nav ul li{
+nav ul li {
     list-style: none;
     display: inline-block;
     margin: 10px 20px;
 }
 
-nav ul li a{
+nav ul li a {
     text-decoration: none;
     color: white;
     font-size: 15px;
     position: relative;
 }
 
-nav ul li a::after{
+nav ul li a::after {
+    content: '';
     width: 0;
-    background:rgb(90, 164, 248);
     height: 3px;
-    bottom: -6px;
-    left: 0;
+    background: var(--primary-color);
     position: absolute;
-    content: ' ';
+    left: 0;
+    bottom: -6px;
     transition: 0.5s;
 }
 
-nav ul li a:hover::after{
+nav ul li a:hover::after {
     width: 100%;
 }
 
-.headertxt{
+.headertxt {
     margin-top: 15%;
     font-size: 30px;
 }
 
-.headertxt h1{
+.headertxt h1 {
     font-size: 60px;
     margin-top: 10px;
+    font-family: 'Lato', sans-serif;
 }
 
-.headertxt h1 span{
-    color: rgb(90, 164, 248);
+.headertxt h1 span {
+    color: var(--primary-color);
 }
 
-#about{
+.headertxt h3 {
+    font-size: 24px;
+}
+
+/* ========== ABOUT SECTION ========== */
+#about {
     padding: 80px 0;
-    color: #ababab;
+    color: var(--text-gray);
 }
 
-.row{
+.row {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
 
-.col1{
+.col1 {
     flex-basis: 25%;
 }
 
-.col1 img{
+.col1 img {
     border-radius: 15px;
-    width: 160%;
+    width: 100%;
+    max-width: 300px;
+    height: auto;
 }
 
-.col2{
+.col2 {
     flex-basis: 50%;
 }
 
-.subtitle{
+.subtitle {
     font-size: 50px;
     font-weight: 600;
     color: white;
-    margin: 0 0 10px 0;
+    margin-bottom: 10px;
+    font-family: 'Lato', sans-serif;
 }
 
-.option-title{
+/* Tabs */
+.option-title {
     display: flex;
-    margin: 20px 0 40px ;
+    margin: 20px 0 40px;
 }
 
-.option{
+.option {
     margin-right: 50px;
     font-weight: 500;
     font-size: 18px;
@@ -131,71 +143,79 @@ nav ul li a:hover::after{
     position: relative;
 }
 
-.option::after{
-    content: ' ';
+.option::after {
+    content: '';
     width: 0;
-    bottom: -6px;
     height: 3px;
-    left: 0;
+    background: var(--primary-color);
     position: absolute;
-    background: rgb(90, 164, 248);
+    bottom: -6px;
+    left: 0;
     transition: 0.5s;
 }
 
-.option.active-title::after{
+.option.active-title::after {
     width: 60%;
 }
 
-.option-cont ul li{
+.option-cont ul li {
     margin: 10px 0;
     list-style: none;
 }
 
-.option-cont ul li span{
-    color: rgb(122, 175, 236);
-    font-size: 15px
+.option-cont ul li span {
+    color: var(--primary-color);
+    font-size: 15px;
+    font-weight: 600;
 }
 
-.option-cont{
+.option-cont {
     display: none;
 }
 
-.active-opt{
+.active-opt {
     display: block;
 }
 
-#services{
+.skill-highlight {
+    color: var(--primary-color);
+    font-weight: 600;
+}
+
+/* ========== SERVICES SECTION ========== */
+#services {
     padding: 30px 0;
 }
 
-.services-list{
+.services-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 40px;
-    margin-top: 50px ;
+    margin-top: 50px;
 }
 
-.services-list div{
+.services-list div {
     background: #262626;
     padding: 40px;
     border-radius: 10px;
     font-size: 13px;
     font-weight: 300;
-    transition: background 0.5s , transform 0.5s;
+    transition: background 0.5s, transform 0.5s;
 }
 
-.services-list div i{
+.services-list div i {
     font-size: 50px;
     margin-bottom: 25px;
+    color: var(--primary-color);
 }
 
-.services-list div h2{
+.services-list div h2 {
     font-size: 25px;
     margin-bottom: 15px;
     font-weight: 600;
 }
 
-.services-list div a{
+.services-list div a {
     font-size: 12px;
     color: #fff;
     text-decoration: none;
@@ -203,40 +223,47 @@ nav ul li a:hover::after{
     display: inline-block;
 }
 
-.services-list div:hover{
-    background: rgb(90, 164, 248);
+.services-list div:hover {
+    background: var(--primary-color);
     transform: translateY(-10px);
 }
 
-#portfolio{
+/* ========== PORTFOLIO SECTION ========== */
+#portfolio {
     padding: 50px 0;
 }
 
-.work-list{
+.work-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 40px;
-    margin-top: 50px ;
+    margin-top: 50px;
 }
 
-.work{
+.work {
     overflow: hidden;
     position: relative;
     border-radius: 10px;
+    transition: transform 0.4s ease, box-shadow 0.4s ease;
 }
 
-.work img{
+.work:hover {
+    transform: scale(1.05);
+    box-shadow: 0 10px 20px rgba(90, 164, 248, 0.2);
+}
+
+.work img {
     display: block;
     width: 100%;
     border-radius: 10px;
     transition: transform 0.5s;
 }
 
-.desc{
+.desc {
     width: 100%;
     height: 0;
     border-radius: 10px;
-    background: linear-gradient(rgba(0,0,0,0.7),rgb(90, 164, 248));
+    background: linear-gradient(rgba(0, 0, 0, 0.8), var(--accent-color));
     position: absolute;
     left: 0;
     bottom: 0;
@@ -251,12 +278,12 @@ nav ul li a:hover::after{
     transition: height 0.5s;
 }
 
-.desc h3{
+.desc h3 {
     font-weight: 600;
-    margin-bottom: 14px
+    margin-bottom: 14px;
 }
 
-.desc a{
+.desc a {
     color: rgb(38, 113, 199);
     width: 50px;
     height: 50px;
@@ -269,19 +296,19 @@ nav ul li a:hover::after{
     border-radius: 50%;
 }
 
-.work:hover .desc{
+.work:hover .desc {
     height: 100%;
 }
 
-.work:hover img{
+.work:hover img {
     transform: scale(1.1);
 }
 
-.btn{
+.btn {
     display: block;
     margin: 50px auto;
     width: fit-content;
-    border: 1px solid rgb(90, 164, 248);
+    border: 1px solid var(--primary-color);
     padding: 12px 35px;
     text-decoration: none;
     color: white;
@@ -289,56 +316,57 @@ nav ul li a:hover::after{
     transition: background 0.5s;
 }
 
-.btn:hover{
-    background-color: rgb(90, 164, 248);;
+.btn:hover {
+    background-color: var(--primary-color);
 }
 
-.contact-left{
+/* ========== CONTACT ========== */
+.contact-left {
     flex-basis: 35%;
 }
 
-.contact-right{
+.contact-right {
     flex-basis: 60%;
 }
 
-.contact-left p{
+.contact-left p {
     margin-top: 30px;
 }
 
-.contact-left p i{
+.contact-left p i {
     font-size: 25px;
     margin-right: 13px;
-    color: rgb(90, 164, 248);
+    color: var(--primary-color);
 }
 
-.social-icon{
+.social-icon {
     margin-top: 30px;
 }
 
-.social-icon a{
+.social-icon a {
     text-decoration: none;
     margin-right: 15px;
     font-size: 30px;
-    color: #ababab;
+    color: var(--text-gray);
     display: inline-block;
     transition: transform 0.5s;
 }
 
-.social-icon a:hover{
-    color: rgb(90, 164, 248);
+.social-icon a:hover {
+    color: var(--primary-color);
     transform: translateY(-6px);
 }
 
-.btn.btn2{
+.btn.btn2 {
     display: inline-block;
-    background: rgb(90, 164, 248);
+    background: var(--primary-color);
 }
 
-.contact-right form{
+.contact-right form {
     width: 100%;
 }
 
-form input,form textarea{
+form input, form textarea {
     width: 100%;
     border: 0;
     margin: 15px 0;
@@ -350,97 +378,103 @@ form input,form textarea{
     font-size: 15px;
 }
 
-form .btn2{
-    margin-top: 20px ;
+form .btn2 {
+    margin-top: 20px;
     font-size: 16px;
     padding: 14px 60px;
     cursor: pointer;
 }
 
-.copyrights{
+/* ========== FOOTER ========== */
+.copyrights {
     width: 100%;
     padding: 20px 0;
     text-align: center;
     font-weight: 400;
     background: #262626;
-    color: #ababab;
+    color: var(--text-gray);
     margin-top: 15px;
 }
 
-nav .fas{
+/* ========== RESPONSIVE ========== */
+nav .fas {
     display: none;
 }
 
-@media only screen and (max-width:700px){
-    
-    .headertxt{
+@media only screen and (max-width: 700px) {
+    .headertxt {
         font-size: 15px;
         margin-top: 70%;
     }
-    .headertxt h1{
+
+    .headertxt h1 {
         font-size: 30px;
     }
-    nav .fas{
+
+    nav .fas {
         display: block;
     }
-    nav ul{
+
+    nav ul {
         width: 200px;
         height: 100vh;
         top: 0;
         right: -200px;
         position: fixed;
         padding-top: 50px;
-        background: rgb(90, 164, 248);
+        background: var(--primary-color);
         z-index: 2;
         transition: right 0.5s;
     }
-    nav ul li{
+
+    nav ul li {
         display: block;
         margin: 25px;
-
     }
 
-    nav ul .fas{
+    nav ul .fas {
         top: 25px;
         left: 25px;
         cursor: pointer;
         position: absolute;
     }
 
-    .subtitle{
+    .subtitle {
         font-size: 40px;
     }
 
-    .col1{
+    .col1 {
         flex-basis: 70%;
         margin-bottom: 30px;
     }
-    .col2{
+
+    .col2 {
         flex-basis: 100%;
         font-size: 14px;
     }
-    
-    .option{
+
+    .option {
         font-size: 17px;
         margin-right: 20px;
     }
 
-    .contact-left, .contact-right{
+    .contact-left,
+    .contact-right {
         flex-basis: 100%;
     }
 
-    .copyrights{
+    .copyrights {
         font-size: 15px;
     }
 }
 
-#info{
+/* ========== MISC ========== */
+#info {
     color: rgb(53, 187, 142);
     margin-top: -30px;
-    /* font-size: 15px; */
     display: block;
 }
 
-.myname{
-    color: rgb(90, 164, 248);
+.myname {
+    color: var(--primary-color);
 }
